--- a/templates/config.yml
+++ b/templates/config.yml
@@ -1,4 +1,3 @@
-
 javascripts:
   - 'lib/jquery.js'
   - 'lib/underscore.js'
@@ -16,3 +15,6 @@ specs:
   
 templates:
   - 'app/templates/*/*.eco'
+
+fixtures:
+  - 'spec/fixtures/*' 
